src/css/App.css
.App {
  font-family: 'Lato', sans-serif;
  overflow-x: hidden;
  overflow: overlay;
  scrollbar-width: thin; /*ONLY ON FIREFOX*/
  scrollbar-color: aqua #575858;
  height: 100vh;
  min-width: 100vw;
}

/*          BELOW CUSTOMIZING SCROLL-BAR WORKS IN CHROMIUM BASED BROWSERS*/

.App::-webkit-scrollbar {
  width: 0.5vw;
}

.App::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.App::-webkit-scrollbar-thumb {
  background-color: aqua;
  outline: 1px solid slategrey;
}

/*          FLEX CSS LOGIC*/

.App-header-div {
  display: flex;
  text-align: center;
  flex-direction: row;
  max-height: 2vh;
  margin-top: 4vh;
}

.Title {
  font-weight: bold;
  font-size: x-large;
  text-decoration: none;
  flex-grow: 1;
  text-align: start;
  margin-left: 12vw;
  cursor: pointer;
}

.App-header-links {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-grow: 1;
  font-size: medium;
}

.Links {
  font-weight: bold;
  text-decoration: none;
  transition: color ls ease-in;
}

.Links:hover {
  cursor: pointer;
  color: aqua !important;
}

.activeLink {
  text-decoration: none;
  font-size: large;
  color: aqua !important;
  pointer-events: none;
}

a:active,
a:focus {
  outline: 0;
}

